# fluxlab

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: dependency-review.yml  test.yml
controller/: controller.py
model/: model.py  spectrum.py  utilities.py
tests/: test_spectrum_model.py
themes/: dark.theme.json
utils/: __init__.py  logger.py
view/: canvas.py  main_window.ui  measurement_tool.py  theme_manager.py  window.py
