[project]
name = "fluxlab"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cycler>=0.12.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pyside6>=6.11.1",
    "pyside6-addons>=6.11.1",
    "pyside6-essentials>=6.11.1",
    "qtawesome>=1.4.2",
    "specutils>=2.3.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.15",
]

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "W", "F", "N", "SLF", "UP"]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["."]